@startuml

title __APP's Class Diagram__\n

  namespace com.example.androidassignment {
    class com.example.androidassignment.BuildConfig {
    }
  }
  

  namespace com.example.androidassignment {
    class com.example.androidassignment.ListItemsActivity {
    }
  }
  

  namespace com.example.androidassignment {
    class com.example.androidassignment.LoginActivity {
    }
  }
  

  namespace com.example.androidassignment {
    class com.example.androidassignment.MainActivity {
    }
  }
  

  com.example.androidassignment.ListItemsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignment.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.androidassignment.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
